[workspace]
members = [
	"frame/dynamic-fee",
	"frame/ethereum",
	"frame/evm",
	"frame/evm/precompile/sha3fips",
	"frame/evm/precompile/simple",
	"frame/evm/precompile/modexp",
	"frame/evm/precompile/ed25519",
	"frame/evm/precompile/bn128",
	"frame/evm/precompile/blake2",
	"frame/evm/precompile/dispatch",
	"frame/evm/precompile/curve25519",

	"client/f-consensus",
	"client/f-rpc-core",
	"client/f-rpc",
	"client/f-db",
	"client/f-mapping-sync",
	"primitives/f-consensus",
	"primitives/evm",
	"primitives/f-rpc",
	"primitives/f-self-contained",

	"template/node",
	"template/runtime",
]
resolver = "2"
