[package]
name = "pallet-ethereum"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Ethereum compatibility full block processing emulation pallet for Substrate."
license = "Apache-2.0"

[dependencies]
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

frame-support = { version = "4.0.0-dev", default-features = false, path = "../support" }
frame-system = { version = "4.0.0-dev", default-features = false, path = "../system" }
pallet-balances = { version = "4.0.0-dev", default-features = false, path = "../balances" }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, path = "../timestamp" }
pallet-evm-acl = { version = "4.0.0-dev", default-features = false, path = "../../frame/evm-acl" }
# frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate" }
# frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate" }
# pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate" }
# pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate" }

pallet-evm = { version = "6.0.0-dev", default-features = false, path = "../evm" }

sp-runtime = { version = "4.0.0-dev", default-features = false, path = "../../primitives/runtime" }
sp-std = { version = "4.0.0-dev", default-features = false, path = "../../primitives/std" }
sp-io = { version = "4.0.0-dev", default-features = false, path = "../../primitives/io" }
# sp-runtime = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate" }
# sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate" }
# sp-io = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate" }

fp-evm = { version = "3.0.0-dev", default-features = false, path = "../../primitives/evm" }
evm = { version = "0.33.1", features = ["with-codec"], default-features = false }
ethereum = { version = "0.11.1", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.12", default-features = false }
rlp = { version = "0.5", default-features = false }
sha3 = { version = "0.8", default-features = false }
fp-consensus = { version = "2.0.0-dev", path = "../../primitives/f-consensus", default-features = false }
fp-rpc = { version = "3.0.0-dev", path = "../../primitives/f-rpc", default-features = false }
fp-storage = { version = "2.0.0", path = "../../primitives/f-storage", default-features = false }
fp-self-contained = { version = "1.0.0-dev", path = "../../primitives/f-self-contained", default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
log = "0.4.8"

[dev-dependencies]
sp-core = { version = "4.0.0-dev", path = "../../primitives/core" }
# sp-core = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
libsecp256k1 = { version = "0.5", features = ["static-context", "hmac"] }
chrono = "0.4.8"
env_logger = "0.9.0"

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
std = [
	"serde",
	"rustc-hex/std",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-timestamp/std",
	"pallet-evm-acl/std",
	"pallet-evm/std",
	"sp-io/std",
	"sp-std/std",
	"fp-evm/std",
	"ethereum/std",
	"ethereum-types/std",
	"rlp/std",
	"sha3/std",
	"fp-consensus/std",
	"fp-rpc/std",
	"fp-storage/std",
	"evm/std",
	"fp-self-contained/std",
	"scale-info/std",
]
