[package]
name = "pallet-evm-acl"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet for evm verkle"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
sp-std = { version = "4.0.0-dev", default-features = false, path = "../../primitives/std" }
sp-io = { version = "4.0.0-dev", default-features = false, path = "../../primitives/io" }
sp-runtime = { version = "4.0.0-dev", default-features = false, path = "../../primitives/runtime" }
frame-support = { version = "4.0.0-dev", default-features = false, path = "../support" }
frame-system = { version = "4.0.0-dev", default-features = false, path = "../system" }
ethabi = { version = "15.0.0", default-features = false }
pallet-evm = { path = "../evm", default-features = false }
sp-core = { version = "4.0.0-dev", default-features = false, path = "../../primitives/core" }
fp-evm = { version = "3.0.0-dev", default-features = false, path = "../../primitives/evm" }
sha3 = { version = "0.8", default-features = false }
log = "0.4.8"
hex-literal = "0.3.1"

[dev-dependencies]
sp-core = { version = "4.0.0-dev", path = "../../primitives/core" }
pallet-balances = { version = "4.0.0-dev", path = "../balances" }
env_logger = "0.9"
chrono = "0.4.8"


[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"ethabi/std",
	"pallet-evm/std",
	"sp-core/std",
	"fp-evm/std",
	"sha3/std",
]
try-runtime = ["frame-support/try-runtime"]
