[package]
name = "frontier-template-runtime"
version = "0.0.0"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
edition = "2018"
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/substrate-developer-hub/frontier-node-template/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

frame-executive = { version = "4.0.0-dev", default-features = false, path = "../../frame/executive" }
frame-support = { version = "4.0.0-dev", default-features = false, path = "../../frame/support" }
frame-system = { version = "4.0.0-dev", default-features = false, path = "../../frame/system" }
frame-system-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, path = "../../frame/system/rpc/runtime-api/" }
# frame-executive = { default-features = false, git = "https://github.com/paritytech/substrate" }
# frame-support = { default-features = false, git = "https://github.com/paritytech/substrate" }
# frame-system = { default-features = false, package = "frame-system", git = "https://github.com/paritytech/substrate" }
# frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate" }

pallet-ethereum = { default-features = false, path = "../../frame/ethereum" }
pallet-evm = { default-features = false, path = "../../frame/evm" }
pallet-dynamic-fee = { default-features = false, path = "../../frame/dynamic-fee" }
pallet-evm-precompile-simple = { default-features = false, path = "../../frame/evm/precompile/simple" }
pallet-evm-precompile-sha3fips = { default-features = false, path = "../../frame/evm/precompile/sha3fips" }
pallet-evm-precompile-modexp = { default-features = false, path = "../../frame/evm/precompile/modexp" }

pallet-aura = { version = "4.0.0-dev", default-features = false, path = "../../frame/aura" }
pallet-balances = { version = "4.0.0-dev", default-features = false, path = "../../frame/balances" }
pallet-grandpa = { version = "4.0.0-dev", default-features = false, path = "../../frame/grandpa" }
pallet-randomness-collective-flip = { version = "4.0.0-dev", default-features = false, path = "../../frame/randomness-collective-flip" }
pallet-sudo = { version = "4.0.0-dev", default-features = false, path = "../../frame/sudo" }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, path = "../../frame/timestamp" }
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, path = "../../frame/transaction-payment" }
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, path = "../../frame/transaction-payment/rpc/runtime-api/" }
# pallet-aura = { default-features = false, git = "https://github.com/paritytech/substrate" }
# pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate" }
# pallet-grandpa = { default-features = false, git = "https://github.com/paritytech/substrate" }
# pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate" }
# pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate" }
# pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate" }
# pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate" }
# pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate" }

pallet-base-fee = { default-features = false, path = "../../frame/base-fee" }

sp-api = { version = "4.0.0-dev", default-features = false, path = "../../primitives/api" }
sp-block-builder = { version = "4.0.0-dev", default-features = false, path = "../../primitives/block-builder"}
sp-consensus-aura = { version = "0.10.0-dev", default-features = false, path = "../../primitives/consensus/aura" }
sp-core = { version = "4.0.0-dev", default-features = false, path = "../../primitives/core" }
sp-inherents = {version = "4.0.0-dev", default-features = false, path = "../../primitives/inherents"}
sp-io = { version = "4.0.0-dev", default-features = false, path = "../../primitives/io" }
sp-offchain = { version = "4.0.0-dev", default-features = false, path = "../../primitives/offchain" }
sp-runtime = { version = "4.0.0-dev", default-features = false, path = "../../primitives/runtime" }
sp-session = { version = "4.0.0-dev", default-features = false, path = "../../primitives/session" }
sp-std = { version = "4.0.0-dev", default-features = false, path = "../../primitives/std" }
sp-transaction-pool = { version = "4.0.0-dev", default-features = false, path = "../../primitives/transaction-pool" }
sp-version = { version = "4.0.0-dev", default-features = false, path = "../../primitives/version" }
# sp-api = { default-features = false, git = "https://github.com/paritytech/substrate" }
# sp-block-builder = { default-features = false, git = "https://github.com/paritytech/substrate"}
# sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/substrate" }
# sp-core = { default-features = false, git = "https://github.com/paritytech/substrate" }
# sp-inherents = { default-features = false, git = "https://github.com/paritytech/substrate"}
# sp-io = { default-features = false, git = "https://github.com/paritytech/substrate" }
# sp-offchain = { default-features = false, git = "https://github.com/paritytech/substrate" }
# sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate" }
# sp-session = { default-features = false, git = "https://github.com/paritytech/substrate" }
# sp-std = { default-features = false, git = "https://github.com/paritytech/substrate" }
# sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/substrate" }
# sp-version = { default-features = false, git = "https://github.com/paritytech/substrate" }

fp-rpc = { default-features = false, path = "../../primitives/f-rpc" }
fp-self-contained = { default-features = false, path = "../../primitives/f-self-contained" }

scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }

# benchmarking dependencies
frame-benchmarking = { version = "4.0.0-dev", default-features = false, path = "../../frame/benchmarking", optional = true }
frame-system-benchmarking = { version = "4.0.0-dev", default-features = false, path = "../../frame/system/benchmarking", optional = true }
# frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true }
# frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true }

[build-dependencies]
substrate-wasm-builder = { version = "5.0.0-dev", path = "../../utils/wasm-builder" }
# substrate-wasm-builder = { git = "https://github.com/paritytech/substrate" }

[features]
default = ["std", "aura"]
aura = []
manual-seal = []
std = [
	"codec/std",
	"serde",

	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"fp-rpc/std",
	"fp-self-contained/std",

	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-dynamic-fee/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-base-fee/std",

	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-benchmarking/std",
	"frame-system-benchmarking/std",

	"scale-info/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"pallet-ethereum/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",
]
