[package]
name = "sc-consensus-vote-election"
version = "0.1.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Generic slots-based utilities for consensus"
edition = "2018"
build = "build.rs"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sc-block-builder = { version = "0.10.0-dev", path = "../../block-builder" }
sc-client-api = { version = "4.0.0-dev", path = "../../api" }
sc-consensus = { version = "0.10.0-dev", path = "../../../client/consensus/common" }
sc-telemetry = { version = "4.0.0-dev", path = "../../telemetry" }
# sc-consensus-aura-slots = { version = "0.10.0-dev", path = "../aura-slots" }

sp-api = { version = "4.0.0-dev", path = "../../../primitives/api" }
sp-application-crypto = { version = "4.0.0-dev", path = "../../../primitives/application-crypto" }
sp-arithmetic = { version = "4.0.0-dev", path = "../../../primitives/arithmetic" }
sp-block-builder = { version = "4.0.0-dev", path = "../../../primitives/block-builder" }
sp-blockchain = { version = "4.0.0-dev", path = "../../../primitives/blockchain" }
sp-consensus = { version = "0.10.0-dev", path = "../../../primitives/consensus/common" }
sp-consensus-slots = { version = "0.10.0-dev", path = "../../../primitives/consensus/slots" }
# sp-consensus-vote-election = { version = "0.2.0-dev", package = "sp-consensus-vote-election-v2", path = "../../../primitives/consensus/vote-election-v2" }
sp-consensus-vote-election = { version = "0.10.0-dev", path = "../../../primitives/consensus/vote-election" }
sp-core = { version = "4.1.0-dev", path = "../../../primitives/core" }
sp-keystore = { version = "0.10.0-dev", path = "../../../primitives/keystore" }
sp-keyring = { version = "4.0.0-dev", path = "../../../primitives/keyring" }
sp-inherents = { version = "4.0.0-dev", path = "../../../primitives/inherents" }
sp-io = { version = "4.0.0-dev", path = "../../../primitives/io" }
sp-trie = { version = "4.0.0-dev", path = "../../../primitives/trie" }
sp-runtime = { version = "4.0.0-dev", path = "../../../primitives/runtime" }
sp-state-machine = { version = "0.10.0-dev", path = "../../../primitives/state-machine" }
sp-timestamp = { version = "4.0.0-dev", path = "../../../primitives/timestamp" }
sp-version = { version = "4.0.0-dev", path = "../../../primitives/version" }

codec = { package = "parity-scale-codec", version = "2.0.0" }

futures = "0.3.9"
futures-timer = "3.0.1"
log = "0.4.11"
thiserror = "1.0.21"
impl-trait-for-tuples = "0.2.1"
async-trait = "0.1.50"
rand = "0.7.0"
num-bigint = "0.2.3"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", path = "../../../utils/prometheus", version = "0.10.0-dev"}
libp2p = { version = "0.37.1", default-features = false }
getrandom = { version = "0.2", features = ["js"], optional = true }
derive_more = "0.99.2"

merlin = { version = "2.0", default-features = false }
schnorrkel = { version = "0.9.1", features = ["preaudit_deprecated"] }

# We enable it only for web-wasm check
# See https://docs.rs/getrandom/0.2.1/getrandom/#webassembly-support

[dev-dependencies]
substrate-test-runtime-client = { version = "2.0.0", path = "../../../test-utils/runtime/client" }
sp-tracing = { version = "4.0.0-dev", path = "../../../primitives/tracing" }
sc-executor = { version = "0.10.0-dev", path = "../../executor" }
sc-network = { version = "0.10.0-dev", path = "../../network" }
sc-network-test = { version = "0.8.0", path = "../../network/test" }
sc-service = { version = "0.10.0-dev", default-features = false, path = "../../service" }
tempfile = "3.1.0"
parking_lot = "0.11.1"
